<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacg"
    android:padding="16dp"
    tools:context=".RegistrationActivity">

    <!-- Logo TextView -->
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="75dp" />

    <!-- Role Selection (RadioGroup) -->
    <RadioGroup
        android:id="@+id/roleRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/tenantRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenant" />

        <RadioButton
            android:id="@+id/propertyOwnerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_owner" />
    </RadioGroup>

    <!-- Name Field -->
    <EditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:background="@drawable/round_editted"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/roleRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/emailField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_editted"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/nameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/usernameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_editted"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp" />

    <!-- Tenant-specific Fields -->
    <LinearLayout
        android:id="@+id/tenantFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/usernameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/universityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_editted"
            android:hint="@string/university"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Property Owner Fields -->
    <LinearLayout
        android:id="@+id/propertyOwnerFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tenantFields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/universityAreaField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/university_area"
            android:inputType="text"
            android:background="@drawable/round_editted"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phoneNumberField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_editted"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Password Field -->
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/round_editted"
        android:drawableStart="@drawable/ic_security"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/propertyOwnerFields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp" />

    <!-- Confirm Password Field -->
    <EditText
        android:id="@+id/confirmPasswordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:background="@drawable/round_editted"
        android:drawableStart="@drawable/ic_security"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- Loading Indicator -->
    <FrameLayout
        android:id="@+id/loadingPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_button"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" />

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
